# elliptic-sdk

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg  setup.py
.github/workflows/: python-package.yml
elliptic/: __init__.py  enums.py  settings.py  test_aml.py
elliptic_sdk/: __init__.py  aml.py  auth.py  client.py  enums.py  schemas.py  settings.py  test_aml.py
tests/: __init__.py  test_aml.py
